<resources>
    <string name="app_name">PracticaMoviles_1TR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Practica polideportivos</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ubicacion">Ubicación actual</string>
    <string name="menu_guardarubicacion">Guardar ubicación</string>
    <string name="menu_instalacionesdeportivas">Instalaciones deportivas</string>
    <string name="menu_piscinas">Piscinas</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_paginasinteres">Páginas de interés</string>

    <string name="gps_ok">Permiso de GPS concedido</string>
    <string name="gps_no_ok">Permiso de GPS denegado</string>

    <string name="guardar_ubicacion">Guardar ubicación</string>
    <string name="instalaciones_deportivas">Instalaciones deportivas</string>
    <string name="piscinas">Piscinas</string>
    <string name="favoritos">Favoritos</string>
    <string name="paginas_de_interes">Páginas de interés</string>

    <string name="textoHomeFragmentActivo">Esta es la última ubicación guardada: </string>
    <string name="textoHomeFragmentDesactivado">No tienes ninguna ubicación guardada.</string>

    <string name="tituloAlert">Eliminar favorito</string>
    <string name="mensajeAlert">¿Quiere eliminar este favorito?</string>
    <string name="optSiAlert">Eliminar</string>
    <string name="optNoAlert">No</string>

    <string name="lastPosition">Acceder a ubicacion guardada</string>

    <string name="favSave">Ya esta en favoritos</string>
    <string name="newFav">Añadido a favoritos</string>
    <string name="location">No hay ninguna ubicacion guardada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver">Ver</string>
</resources>